--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                       src="./assets/github.png" 
                       alt="My github Profile" 
                       class="icon"
-                      onclick="location.href='https://github.com/FabianFarrel'">
+                      onclick="location.href='https://github.com/FabianFarre1/'">
                       <img 
                       src="./assets/2515843_black and white_dark grey_instagram_icon.png" 
                       alt="My Instagram Profile" 
