--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
             <img
               src="./assets/dumbways.png"
               alt="logo"
-              style="width: 45px"
+              style="width: 55px ; margin-top: 9px; margin-right: 10px;"
             />
           </li>
           <li>
