--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
               />
             </li>
             <li>
-              <a href="index.html" class="active" > <b> Home</b></a>
+              <a href="index.html" class="active" > Home </a>
             </li>
             <li>
-              <a href="my project.html" class="active"><b> My Project</b></a>
+              <a href="my project.html" class="active"> My Project</a>
             </li>
           </ul>
         </div>
